# Tesla-Infotainment-Replica

./: CMakeLists.txt  README.md  Tesla-Infotainment-Replica.kdev4  TeslaInfotainment.kdev4  TeslaInfotainment.pro  main.cpp  qml.qrc
.kdev4/: Tesla-Infotainment-Replica.kdev4  TeslaInfotainment.kdev4
Controllers/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
resources/: main.qml
resources/ui/ApplicationBar/: ApplicationBar.qml
resources/ui/BottomBar/: ApplicationComponent.qml  BottomBar.qml  HVACComponent.qml  VolumeControlComponent.qml
resources/ui/LeftScreen/: CarInfo.qml  CarRender.qml  LeftScreen.qml  LeftScreenViewController.qml
resources/ui/RightScreen/: NavigationSearchBox.qml  RightScreen.qml
src/: main.cpp
ui/BottomBar/: VolumeControlComponent.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: RightScreen.qml
